// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListRenderer snapshot (T-0006-107) — productive×focus matches snapshot at productive×focus 1`] = `
<View
  accessibilityLabel="workouts"
  style={
    {
      "minHeight": 168,
    }
  }
  testID="list-container"
>
  <View>
    <View
      style={
        {
          "justifyContent": "center",
          "minHeight": 56,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#14171A",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        Push-ups
      </Text>
    </View>
  </View>
  <View>
    <View
      style={
        {
          "justifyContent": "center",
          "minHeight": 56,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#14171A",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        Squats
      </Text>
    </View>
  </View>
  <View>
    <View
      style={
        {
          "justifyContent": "center",
          "minHeight": 56,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#14171A",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        Pull-ups
      </Text>
    </View>
  </View>
</View>
`;

exports[`ListRenderer snapshot (T-0006-108) — expressive×health matches snapshot at expressive×health 1`] = `
<View
  accessibilityLabel="workouts"
  style={
    {
      "minHeight": 168,
    }
  }
  testID="list-container"
>
  <View>
    <View
      style={
        {
          "justifyContent": "center",
          "minHeight": 56,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#1A1715",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        Push-ups
      </Text>
    </View>
  </View>
  <View>
    <View
      style={
        {
          "justifyContent": "center",
          "minHeight": 56,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#1A1715",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        Squats
      </Text>
    </View>
  </View>
  <View>
    <View
      style={
        {
          "justifyContent": "center",
          "minHeight": 56,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#1A1715",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        Pull-ups
      </Text>
    </View>
  </View>
</View>
`;
